welcome.lessons.welcome.variables.Variables.scala.code
var nbpas:int=0
while {(estSurBiscuit()=true)
avance()
nbpas=nbpas+1}
var dejafait:int=0
while {(dejafait=nbpas)
recile()]}